networkpolicy/00-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
