networkpolicy/bedrock-access-to-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-common-web-ui
  namespace: "openshift-monitoring"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      prometheus: k8s
  ingress:
  - {}
  policyTypes:
  - Ingress
