networkpolicy/bedrock-allow-cpns-access-from-csns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-cpns-from-csns
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "csNamespace"
  podSelector: {}
  policyTypes:
  - Ingress
