networkpolicy/zen-access-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-nginx
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "ibm-nginx"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-host-network
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: "csNamespace"
    - podSelector: {}
