networkpolicy/zen-access-to-usermgmt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-usermgmt
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "usermgmt"
  policyTypes:
  - Ingress
  ingress:
  - {}
