networkpolicy/zen-access-to-zen-core-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-zen-core-api
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "zen-core-api"
  policyTypes:
  - Ingress
  ingress:
  - {}
